# eispec

./: Cargo.toml  README.md
eispec_macros/: Cargo.toml  README.md
eispec_macros/src/: lib.rs
examples/: battery_example.rs  battery_example_data.csv  circuit_a_example.rs  circuit_a_example_data.csv  randles_example.rs  randles_example_data.csv  simple_example.rs  simple_example_data.csv
src/: circuits.rs  components.rs  constants.rs  data.rs  fit.rs  lib.rs  models.rs  newtypes.rs  utils.rs
src/components/: core.rs  cpe.rs  dielectric.rs  electrochem.rs  rcl.rs  rlc.rs  warburg.rs
src/fit/: config.rs  enorm.rs  enums.rs  fit.rs  jacobian.rs  model.rs  model_parameter.rs  mpfit.rs  status.rs
src/newtypes/: current.rs  frequency.rs  impedance.rs  power.rs  voltage.rs
