workspace = { members = ["eispec_macros"] }

[package]
name = "eispec"
version = "0.1.0"
authors = ["Jez Smith <j.smith.03@cantab.net>"]
readme = "README.md"
license-file = "LICENSE.md"
include = ["src/", "LICENSE.md", "README.md"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
num = "0.4"
thiserror = "1.0"
eispec_macros = { path = "./eispec_macros" }

[dev-dependencies]
assert_approx_eq = "1.1.0"
