[package]
name = "eispec_macros"
version = "0.1.0"
authors = ["Jez Smith <j.smith.03@cantab.net>"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
